[package]
name = "LudumDare49"
version = "0.1.0"
authors = ["Seurimas <nicholasanderson5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15.3", features = ["amethyst_tiles", "tiles"] }
ncollide2d = "0.32.0"
nphysics2d = "0.24.0"
nalgebra = "0.29"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
default = ["vulkan"]

